--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
 	background-image: linear-gradient(to bottom left, #9d4edd, #5a189a, #240046, #10002b);
 	max-height: 100vh;
 	overflow: hidden;
+	display: flex;
 }
 
 .icon{
@@ -15,10 +16,12 @@ body{
 }
 
 .middle{
+	justify-content: center;
+  	align-items: center;
 	background-color: #ecf8f8;
-    max-width: 400px;
-    border: 2px solid transparent;
-    border-radius: 20px;
+        max-width: 400px;
+        border: 2px solid transparent;
+	border-radius: 20px;
 	margin: 38px auto;
 	
     
